iac_files_12/iac-file-490.tf
resource "google_compute_firewall" "allowed" {
  name    = "test-firewall"
  network = "test"
  allow {
    protocol = "icmp"
  }
  allow {
    protocol = "tcp"
    ports    = ["80", "8080", "1000-2000"]
  }
  source_tags = ["web"]
}

resource "google_compute_firewall" "allowed_2" {
  name      = "test-firewall"
  network   = "test"
  direction = "EGRESS"
  allow {
    protocol = "icmp"
  }
  allow {
    protocol = "tcp"
    ports    = ["80", "8080", "1000-2000"]
  }
  source_ranges = ["0.0.0.0/0"]
}
